hphp/test/slow/readonly/inout_readonly.php.expectf

Fatal error: Inout readonly parameters are not currently supported in %s on line 4
